Fix broken styles

--- a/styles/days/show.scss
+++ b/styles/days/show.scss
@@ -64,7 +64,9 @@
 
     .osw-short-date {
       padding: 0 2px;
-      line-height: 15px;
+      font-size: 14px;
+      line-height: 18px;
+      color: $grey-darker;
       text-align: right;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -73,11 +75,12 @@
     }
 
     .osw-show-more {
-      padding: 2px;
+      padding: 0 2px;
       color: $grey-darker;
       cursor: pointer;
       font-size: 11px;
       text-align: center;
+      line-height: 18px;
     }
   }
 }
